--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ form button:hover {
   border-radius: 16px;
   box-shadow: 0 8px 40px rgba(255, 255, 255, 0.3);
   max-width: 120vw;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 3rem; /* más padding abajo */
   display: none;
   flex-direction: column;
   z-index: 1000;
@@ -695,7 +695,8 @@ form button:hover {
   
 }
 
-#formFlotante button[type="submit"] {
+#formFlotante button[type="submit"],
+#formPopup button[type="submit"] {
   padding: 0.75rem 1.25rem;
   background-color: #353535;
   color: #ffffff;
@@ -709,7 +710,7 @@ form button:hover {
   align-self: center;
 }
 
-#formFlotante button[type="submit"]:hover {
+#formFlotante button[type="submit"]:hover,#formPopup button[type="submit"]:hover {
   background-color: #e4e4e4;
   color: #000;
 }
@@ -1516,7 +1517,8 @@ form button:hover {
     right: 20px;
     bottom: 60px;
     width: 400px;
-    height: 500px;
+     max-height: 90vh;
+     overflow-y: auto;
     display: none;
     opacity: 0;
     z-index: 1000;
