--- a/css/style.css
+++ b/css/style.css
@@ -331,13 +331,23 @@ nav {
   transform: scale(0.8); /* GSAP animará */
 }
 
-.gif-fondo {
- filter: brightness(40%);
+.video-fondo {
   position: absolute;
-  inset: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: -1; /* Detrás del contenido */
+  pointer-events: none; /* No bloquea clics */
+}
+.overlay-negro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* ajusta el 0.5 para más o menos oscuridad */
   z-index: -1;
 }
 /* ------------------------------------------------------------------
